--- a/admin.html
+++ b/admin.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -45,6 +46,13 @@
    <script type="module" src="scripts.js"></script>
 </head>
 <body class="min-h-screen text-gray-800 font-kanit relative">
+
+  <div class="floating-elements">
+    <div class="floating-banana">🍌</div>
+    <div class="floating-banana">🥭</div>
+    <div class="floating-banana">🍊</div>
+    <div class="floating-banana">🍌</div>
+  </div>
 
   <div id="loginModal" class="fixed inset-0 bg-black bg-opacity-70 backdrop-blur-md flex items-center justify-center z-50 p-4">
     <div class="premium-card p-8 md:p-10 rounded-3xl premium-shadow w-full max-w-md transform transition-all duration-700 animate-fade-in neon-glow">
@@ -285,14 +293,14 @@
         </div>
 
         <div class="p-8">
-          <div id="orderList" class="space-y-6"></div>
+          <div id="ordersList" class="space-y-6"></div>
 
           <div id="emptyOrdersState" class="hidden text-center py-16">
             <div class="w-24 h-24 bg-gradient-to-br from-gray-100 to-gray-200 rounded-full flex items-center justify-center mx-auto mb-6 premium-shadow animate-float">
               <span class="text-4xl text-gray-400 icon-bounce">📦</span>
             </div>
-            <h3 class="text-2xl font-black text-gray-700 mb-4 text-gradient">ไม่พบออร์เดอร์</h3>
-            <p class="text-gray-600 text-base font-medium mb-6">ลองค้นหาด้วยคำอื่นๆ หรือรีเฟรชข้อมูล</p>
+            <h3 class="text-2xl font-black text-gray-700 mb-4 text-gradient">ยังไม่มีออร์เดอร์</h3>
+            <p class="text-gray-600 text-base font-medium mb-6">เมื่อมีลูกค้าสั่งซื้อสินค้า ออร์เดอร์จะแสดงที่นี่</p>
             <div class="flex justify-center space-x-2">
               <div class="w-3 h-3 bg-gray-400 rounded-full animate-pulse"></div>
               <div class="w-3 h-3 bg-gray-500 rounded-full animate-pulse" style="animation-delay: 0.2s"></div>
@@ -303,87 +311,6 @@
       </div>
     </div>
   </div>
-
-  <div id="orderDetailModal" class="fixed inset-0 bg-black bg-opacity-70 backdrop-blur-sm hidden items-center justify-center z-50 p-4">
-    <div class="bg-white rounded-3xl p-6 md:p-8 w-full max-w-2xl transform transition-all duration-300 premium-shadow neon-glow">
-        <div class="flex justify-between items-center mb-6">
-            <h3 class="text-2xl font-bold text-gray-800 flex items-center gap-2">
-                <span class="text-3xl text-honey-500">📄</span> รายละเอียดออร์เดอร์
-            </h3>
-            <button onclick="closeModal()" class="text-gray-500 hover:text-gray-800 transition-colors">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                </svg>
-            </button>
-        </div>
-
-        <div class="space-y-6">
-            <div class="bg-gray-100 p-4 rounded-xl">
-                <p class="text-sm text-gray-500">รหัสออร์เดอร์:</p>
-                <p class="text-lg font-bold text-gray-800" id="orderIdDisplay"></p>
-            </div>
-            
-            <div>
-                <p class="text-sm font-semibold text-gray-700">ข้อมูลลูกค้า</p>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-2">
-                    <div class="flex items-center gap-2">
-                        <span class="text-gray-500 font-medium">ชื่อ:</span>
-                        <span id="modalCustomerName" class="font-bold"></span>
-                    </div>
-                    <div class="flex items-center gap-2">
-                        <span class="text-gray-500 font-medium">เบอร์โทร:</span>
-                        <span id="modalCustomerPhone" class="font-bold"></span>
-                    </div>
-                    <div class="flex items-start gap-2 col-span-1 md:col-span-2">
-                        <span class="text-gray-500 font-medium">ที่อยู่:</span>
-                        <span id="modalCustomerAddress" class="font-bold flex-1"></span>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <p class="text-sm font-semibold text-gray-700 mb-2">รายการสินค้า</p>
-                <div class="overflow-x-auto">
-                    <table class="w-full text-sm">
-                        <thead class="bg-gray-200 rounded-xl">
-                            <tr>
-                                <th class="p-3 text-left">สินค้า</th>
-                                <th class="p-3 text-center">จำนวน</th>
-                                <th class="p-3 text-right">รวม (บาท)</th>
-                            </tr>
-                        </thead>
-                        <tbody id="modalOrderItems" class="divide-y divide-gray-100"></tbody>
-                    </table>
-                </div>
-            </div>
-
-            <div class="bg-gradient-to-r from-green-500 to-teal-500 text-white p-4 rounded-xl flex justify-between items-center">
-                <p class="font-bold text-lg">ยอดรวมทั้งหมด</p>
-                <p class="text-2xl font-black" id="modalTotalAmount">0.00</p>
-            </div>
-
-            <div>
-                <label for="orderStatusSelect" class="input-label">เปลี่ยนสถานะ</label>
-                <select id="orderStatusSelect" class="input-modern">
-                    <option value="รอดำเนินการ">รอดำเนินการ</option>
-                    <option value="กำลังจัดส่ง">กำลังจัดส่ง</option>
-                    <option value="จัดส่งแล้ว">จัดส่งแล้ว</option>
-                    <option value="ยกเลิก">ยกเลิก</option>
-                </select>
-            </div>
-
-            <div class="mt-6 flex gap-4">
-                <button onclick="updateOrderStatus()" class="btn-primary flex-1">
-                    <span class="text-xl">✅</span> บันทึก
-                </button>
-                <button onclick="closeModal()" class="btn-secondary flex-1">
-                    <span class="text-xl">❌</span> ยกเลิก
-                </button>
-            </div>
-        </div>
-    </div>
-  </div>
-
 
   <div id="receiptView" class="hidden min-h-screen bg-gray-50">
     <div class="bg-white shadow-lg border-b sticky top-0 z-40 no-print">
@@ -414,6 +341,8 @@
 
         <div class="receipt-content">
        <div class="relative text-center py-6 px-4 bg-gradient-to-br from-yellow-300 via-yellow-400 to-amber-500 text-white rounded-t-2xl shadow-md">
+  <div class="receipt-watermark">ร้านแม่ดอนโอทอป</div>
+
   <div class="w-16 h-16 bg-white bg-opacity-20 rounded-full flex items-center justify-center mx-auto mb-3 animate-bounce shadow-inner">
     <span class="text-3xl">🍌</span>
   </div>
@@ -508,7 +437,7 @@
       if (localStorage.getItem('isLoggedIn') === 'true') {
         loginModal.classList.add('hidden');
         adminDashboard.classList.remove('hidden');
-        listenForOrders(); // Call listenForOrders to load the data
+        loadOrders();
       }
     });
 
@@ -518,7 +447,7 @@
         localStorage.setItem('isLoggedIn', 'true');
         document.getElementById('loginModal').classList.add('hidden');
         document.getElementById('adminDashboard').classList.remove('hidden');
-        listenForOrders(); // Call listenForOrders to load the data
+        loadOrders();
       } else {
         alert('รหัสผ่านไม่ถูกต้อง');
         document.getElementById('passwordInput').value = '';
@@ -527,22 +456,6 @@
 
     function logout() {
       localStorage.removeItem('isLoggedIn');
-    }
-    
-    function handlePasswordKeyPress(event) {
-        if (event.key === 'Enter') {
-            login();
-        }
-    }
-
-    function handleAdminSearchKeyPress(event) {
-        if (event.key === 'Enter') {
-            searchAdminOrders();
-        }
-    }
-
-    function searchAdminOrders() {
-        filterOrders();
     }
   </script>
 </body>
