--- a/money.html
+++ b/money.html
@@ -36,16 +36,16 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getDatabase, ref, push, set, onValue, query, orderByChild, limitToLast, remove, update } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCDAaW-OyL_13qkF7sCxXkMhpJyrOtntjg",
-      authDomain: "orders-3d979.firebaseapp.com",
-      databaseURL: "https://orders-3d979-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "orders-3d979",
-      storageBucket: "orders-3d979.appspot.com",
-      messagingSenderId: "123456789",
-      appId: "1:123456789:web:4f1b772b853b602cc93e94",
-      measurementId: "G-P5JPR90CX8"
-    };
+  const firebaseConfig = {
+  apiKey: "AIzaSyCDAaW-OyL_13qkF7sCxXkMhpJyrOtntjg",
+  authDomain: "orders-3d979.firebaseapp.com",
+  databaseURL: "https://orders-3d979-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "orders-3d979",
+  storageBucket: "orders-3d979.appspot.com", // ✅ แก้ตรงนี้
+  messagingSenderId: "1048840913149",        // ✅ แก้ตรงนี้
+  appId: "1:1048840913149:web:4f1b772b853b602cc93e94",
+  measurementId: "G-P5JPR90CX8"
+};
 
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
