--- a/money.html
+++ b/money.html
@@ -651,7 +651,7 @@
             try {
                 // Send all transactions to Google Sheets
                 for (const transaction of transactions) {
-                    const response = await fetch(GOOGLE_SCRIPT_URL, {
+                    const response = await fetch(https://script.google.com/macros/s/AKfycbwPG4gCj8h6Fa--gSdHA6rnGcJ7jnmY5Rz_XBH7MgldUm8fbsPGoaF4-r1BzBkSh8A/exec, {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
