--- a/money.html
+++ b/money.html
@@ -271,7 +271,7 @@
 
     <script>
         // Configuration
-        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwR72eurjzD3TWvUDSgaXQ1weg4ZpUJX8_d9yzunlmJVyNBUrOMoMEXuIeuyrdeaO0/exec'; // *** อัปเดต URL ตรงนี้ ***
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwR72eurjzD3TWvUDSgaXQ1weg4ZpUJX8_d9yzunlmJVyNBUrOMoMEXuIeuyrdeaO0/exec';
         
         // Global variables
         let currentTransactionType = 'income';
@@ -804,5 +804,5 @@
             }
         }
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96bd3cb723381100',t:'MTc1NDYzNzQ3OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</body>
 </html>
